# itcd

./: AGENTS.md  NEDB.md  codemagic.yaml  configure.ac
.github/: CODEOWNERS
.github/workflows/: linux-static.yml  nedb-ci.yml  windows-build.yml
docs/: HANDOFF_2026-06-23_STARTUP_PROGRESS.md  HANDOFF_2026-07-02_GHOST_BACKGROUND_HYDRATE.md  index.html  session-handoff.md
nedb-ffi/: Cargo.toml  build.rs  nedb.h  nedb_ffi_stub.c
nedb-ffi/src/: lib.rs
src/: Makefile.am  chainparams.cpp  dbwrapper.h  dbwrapper_nedb.cpp  ghost.h  init.cpp  net_processing.cpp  pow.cpp  txdb.cpp  txdb.h  validation.cpp  validation.h
src/consensus/: params.h
