[package]
name = "nedb-ffi"
version = "0.1.0"
edition = "2021"
description = "C FFI bridge — exposes the NEDB DAG engine to the ITC C++ node (replaces LevelDB)"
license = "MIT"

[lib]
name = "nedb_ffi"
# staticlib  → links into itcd binary
# cdylib     → shared .so/.dylib for dynamic linking
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Phase 1: HashMap-backed MVP proves the C FFI surface compiles and the CDBWrapper shim works.
# Phase 2: uncomment the line below to wire in the real NEDB DAG engine (nedb_core_v2::Db).
# nedb-v2 = { git = "https://github.com/Eth-Interchained/nedb", package = "nedb-v2" }

hex    = "0.4"
blake2 = "0.10"  # for the state-root head computation

[build-dependencies]
# cbindgen auto-generates nedb.h from the #[no_mangle] exports in src/lib.rs
cbindgen = "0.26"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
