[package]
name        = "nedb-ffi"
version     = "0.1.0"
edition     = "2021"
description = "C FFI bridge — exposes the NEDB DAG engine to the ITC C++ node (replaces LevelDB)"
license     = "MIT"

[lib]
name       = "nedb_ffi"
crate-type = ["staticlib", "cdylib"]

# ── Feature flags ─────────────────────────────────────────────────────────
# Phase 1 (default): BTreeMap-backed in-process store.
#   Proves the C FFI seam and CI pipeline. Zero external database deps.
#
# Phase 2: nedb_core_v2::Db  — real BLAKE2b chain head, MVCC AS OF,
#   causal DAG (caused_by), AES-256-GCM via NEDB_TMK, TRACE provenance.
#   Activate: cargo build --release --features phase2
[features]
default = []
phase2  = ["nedb-core-v2", "serde_json"]

# ── Dependencies ──────────────────────────────────────────────────────────
[dependencies]
hex    = "0.4"
blake2 = "0.10"           # Phase 1 BLAKE2b state-root chain

# Phase 2 — real NEDB DAG engine (optional, gated by phase2 feature)
nedb-core-v2 = { git = "https://github.com/Eth-Interchained/nedb", package = "nedb-core-v2", optional = true }
serde_json   = { version = "1", optional = true }

[build-dependencies]
cbindgen = "0.26"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
